--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -3,7 +3,9 @@
     <div class="col-xs-12">
       <h3>I am inside AppComponents</h3>
       <hr>
-      <app-servers></app-servers>
+      <app-servers></app-servers> <!-- recommended -->
+      <!--<div app-servers></div>  --> <!-- Attribute component -->
+      <!-- <div class="app-servers"></div> --> <!-- using class-->
     </div>
   </div>
 </div>
