DataBinding only one way building

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -6,6 +6,9 @@
       <app-servers></app-servers> <!-- recommended -->
       <!--<div app-servers></div>  --> <!-- Attribute component -->
       <!-- <div class="app-servers"></div> --> <!-- using class-->
+      <hr>
+      <app-warning-alert></app-warning-alert>
+      <app-success-alert></app-success-alert>
     </div>
   </div>
 </div>
