--- a/my-app/src/app/server/server.component.html
+++ b/my-app/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<p> Server Componet simple</p>
+
+<h4> Data Binding String interpolation </h4>
+<p> server with ID {{ serverId}} is {{ getServerStatus() }}</p>
