data binding and built in directive ngFor ngIf ngClass ngStyle

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -9,6 +9,30 @@
       <hr>
       <app-warning-alert></app-warning-alert>
       <app-success-alert></app-success-alert>
+      
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <hr>
+            <Label>Assignment 2</Label>
+            <app-assignment-2></app-assignment-2>
+            <hr>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <hr>
+            <Label>Assignment 3</Label><br>
+            <app-assignment-3></app-assignment-3>
+            <hr>
+          </div>
+        </div>
+      </div>
+      
+
     </div>
   </div>
 </div>
