--- a/components and databinding/app-section5/src/app/app.component.html
+++ b/components and databinding/app-section5/src/app/app.component.html
@@ -9,8 +9,18 @@
     <div class="col-xs-12">
       <!-- pass element from app to child bs. app implement or host server-element -->
       <!-- add alis for property binding -->
+      <!--
       <app-server-element *ngFor="let serverElement of serverElements"
       [srvElement]="serverElement"></app-server-element>
+      -->
+
+      <!-- Projecting content into componenrt with ng-content-->
+      <app-server-element *ngFor="let serverElement of serverElements" [srvElement]="serverElement">
+        <p>
+          <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+          <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+        </p>
+      </app-server-element>
     </div>
   </div>
  
