--- a/components and databinding/app-section5/src/app/cokpit/cokpit.component.html
+++ b/components and databinding/app-section5/src/app/cokpit/cokpit.component.html
@@ -21,13 +21,12 @@
 
         
         <!-- add another way to use #localRefernce-->
-        <!--
-        <input type="class"
+        <!--<input type="class"
              class="form-control"
              #serverContentInput>
         <button
             class="btn btn-primary"
-            (click)="onAddBlueprint2()">Add Server Blueprint</button> -->
+            (click)="onAddBlueprint2()">Add(Another way of local refernce)</button> -->
       <br>
         
     </div>
