--- a/new-app/src/app/app.component.html
+++ b/new-app/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-header></app-header>
+<app-header (whatwillBeShowen)="whatWillBeShow($event)"></app-header>
 <br>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="navigate === 'recipes'"></app-recipes>
+      <app-shopping-list *ngIf="navigate !== 'recipes'"></app-shopping-list>
     </div>
   </div>
 </div>
