--- a/new-app/src/app/header/header.component.html
+++ b/new-app/src/app/header/header.component.html
@@ -59,10 +59,10 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Recipes</a>
+      <a class="nav-link"(click)="onSelect('recipes')">Recipes</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Shopping List</a>
+      <a class="nav-link"  (click)="onSelect('shopping-list')">Shopping List</a>
     </li>
 
     <!-- Dropdown -->
