--- a/new-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/new-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,14 @@
-<p>recipe-item works!</p>
+<a  class="list-group-item clearfix" (click)="sendRecipeItem()">
+    <div class="pull-left" style="display:inline-block">
+        <h5 class="list-group-item-heading">{{ recipeItems.name }}</h5>
+        <p class="list-group-item-text">{{ recipeItems.description }}</p>
+    </div>
+    <span class="pull-right mx-4">
+        <!--We can use sting interpolation {{}} or property binding with [src] -->
+        <img 
+            [src] ="recipeItems.imagePath" 
+            alt={{recipeItems.name}} 
+            class="img-responsive "  
+            style="max-height: 60px;">
+    </span>
+</a>
