--- a/new-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/new-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,23 +7,11 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <a href="#" class="list-group-item clearfix" *ngFor = "let recipe of recipes">
-            <div class="pull-left" style="display:inline-block">
-                <h5 class="list-group-item-heading">{{ recipe.name }}</h5>
-                <p class="list-group-item-text">{{ recipe.description }}</p>
-            </div>
-            <span class="pull-right mx-4">
-                <!--We can use sting interpolation {{}} or property binding with [src] -->
-                <img 
-                    [src] ="recipe.imagePath" 
-                    alt={{recipe.name}} 
-                    class="img-responsive "  
-                    style="max-height: 60px;">
-            </span>
-        </a>
+        <app-recipe-item *ngFor="let recipeEl of recipes"
+        [recipeItems]="recipeEl" (recipeItem)="recipeDetails($event)"></app-recipe-item>
     </div>
 </div>
 
 
 
-  <app-recipe-item></app-recipe-item>
+ 
