--- a/new-app/src/app/shopping-list/shopping-list.component.html
+++ b/new-app/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-10">
-        <app-shopping-edit></app-shopping-edit>
+        <app-shopping-edit (IngredientAdded)="addIngredientToOurs($event)"></app-shopping-edit>
         <hr>
         <ul class="list-group">
             <a 
