--- a/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -12,23 +12,6 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
-            <button
-             type="button"
-             class ="btn btn-primary dropdown-toggle">
-            Manage Recipe<span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="#">Add Ingredients to shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-xs-12">
         Description
     </div>
 </div>
@@ -38,3 +21,42 @@
         Ingredients
     </div>
 </div>
+
+<div class="row">
+    <div class="col-xs-12">
+        <div class="btn-group" appDropdown  #r="appDropdown" >
+            <button
+             type="button"
+             class ="btn btn-primary dropdown-toggle" 
+             (click)='changeStatusDropdown()'>
+
+            Manage Recipe<span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu"  [ngClass]="{'show':r.isOpen}">
+                <li><a >To shopping List</a></li>
+                <li><a>Edit Recipe</a></li>
+                <li><a>Delete Recipe</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+      <div
+        class="btn-group"
+        appDropdown>
+        <button
+          type="button"
+          class="btn btn-primary dropdown-toggle">
+          Manage Recipe <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">To Shopping List</a></li>
+          <li><a href="#">Edit Recipe</a></li>
+          <li><a href="#">Delete Recipe</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
