cross component and assignment

--- a/services/src/app/app.component.html
+++ b/services/src/app/app.component.html
@@ -10,4 +10,8 @@
         ></app-account>
     </div>
   </div>
+
+  <app-active-users></app-active-users>
+  <hr>
+  <app-inactive-users></app-inactive-users>
 </div>
