add ingredients to shopping list using services and inject servic into other

--- a/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,17 +10,18 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-xs-12">
-        Description
-    </div>
+<div class="col-xs-12">
+    <h4>Description</h4>
+    <ul class="list-group-item">
+        <li
+            class="list-group-item"
+            *ngFor="let ingredient of recipeDetails.ingredients"
+        >
+            {{ ingredient.name}} - {{ ingredient.amount }}
+        </li>
+    </ul>
 </div>
 
-<div class="row">
-    <div class="col-xs-12">
-        Ingredients
-    </div>
-</div>
 
 <div class="row">
     <div class="col-xs-12">
@@ -29,11 +30,10 @@
              type="button"
              class ="btn btn-primary dropdown-toggle" 
              (click)='changeStatusDropdown()'>
-
             Manage Recipe<span class="caret"></span>
             </button>
             <ul class="dropdown-menu"  [ngClass]="{'show':r.isOpen}">
-                <li><a >To shopping List</a></li>
+                <li><a (click)= "onAddToShoppingList()" style="cursor: pointer;" >To shopping List</a></li>
                 <li><a>Edit Recipe</a></li>
                 <li><a>Delete Recipe</a></li>
             </ul>
@@ -41,22 +41,4 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-xs-12">
-      <div
-        class="btn-group"
-        appDropdown>
-        <button
-          type="button"
-          class="btn btn-primary dropdown-toggle">
-          Manage Recipe <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#">To Shopping List</a></li>
-          <li><a href="#">Edit Recipe</a></li>
-          <li><a href="#">Delete Recipe</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
 
