--- a/new-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/new-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,12 +5,28 @@
 </div>
 <hr>
 
+<!--
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor="let recipeEl of recipes"
-        [recipeItems]="recipeEl" (recipeItem)="recipeDetails($event)"></app-recipe-item>
+        <app-recipe-item
+            *ngFor="let recipeEl of recipes"
+            [recipeItems]="recipeEl" 
+            (recipeItem)="recipeDetails($event)"></app-recipe-item>
     </div>
 </div>
+ -->
+
+<!-- using cross component -->
+<div class="row">
+    <div class="col-xs-12">
+        <app-recipe-item
+            *ngFor="let recipeEl of recipes"
+            [recipeItems]="recipeEl" >
+        </app-recipe-item>
+    </div>
+</div>
+
+
 
 
 
