--- a/new-app/src/app/shopping-list/shopping-list.component.html
+++ b/new-app/src/app/shopping-list/shopping-list.component.html
@@ -1,5 +1,6 @@
 <div class="row">
-    <div class="col-md-10">
+  <!-- send data usim=ng @Input and @Output -->
+  <!---  <div class="col-md-10">
         <app-shopping-edit (IngredientAdded)="addIngredientToOurs($event)"></app-shopping-edit>
         <hr>
         <ul class="list-group">
@@ -12,5 +13,24 @@
         </a>
 
         </ul>
-    </div>
+    </div> 
+-->
+
+    <div class="col-md-10">
+        <app-shopping-edit></app-shopping-edit>
+        <hr>
+        <ul class="list-group">
+            <a 
+            class="list-group-item" 
+            style="cursor: pointer"
+            *ngFor= "let ingredient of ingredients"
+            >
+            {{ ingredient.name}} ({{ ingredient.amount}})
+        </a>
+
+        </ul>
+    </div> 
+
+
+
 </div>
