difference between relative path and native

--- a/routers/src/app/servers/servers.component.html
+++ b/routers/src/app/servers/servers.component.html
@@ -10,6 +10,14 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-4">
+      <!-- called Relative path and go to servers/servers-->
+      <!-- <a routerLink="servers">Reload the page </a>
+      <a routerLink="./servers">Reload the page </a> -->
+      <!-- Non Relative path -->
+      <a routerLink="/servers">Reload the page </a><br>
+      <!-- or  lik folders -->
+      <!-- <a routerLink="../servers">Reload the page </a> -->
+
       <app-edit-server></app-edit-server>
       <hr>
       <app-server></app-server>
