--- a/routers/src/app/app.component.html
+++ b/routers/src/app/app.component.html
@@ -1,10 +1,16 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+    <div class="row">
+      <div  class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <ul class="nav nav-tabs">
-        <li role="presentation" class="active mx-2"><a href="#">Home</a></li>
-        <li role="presentation" class="mx-2"><a href="#">Servers</a></li>
-        <li role="presentation"><a href="#">Users</a></li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/servers">Servers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/users'">Users</a>
+        </li>
       </ul>
     </div>
   </div>
