--- a/routers/src/app/app.component.html
+++ b/routers/src/app/app.component.html
@@ -2,18 +2,20 @@
     <div class="row">
       <div  class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <ul class="nav nav-tabs">
-        <li class="nav-item">
+        <li class="nav-item" routerLinkActive="active"
+                             [routerLinkActiveOptions]="{exact: true}">
           <a class="nav-link " routerLink="/">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/servers">Servers</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="'/users'">Users</a>
         </li>
       </ul>
     </div>
   </div>
+  
   <br>
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offser-1 col-md-offset-2">
