--- a/routers/src/app/servers/servers.component.html
+++ b/routers/src/app/servers/servers.component.html
@@ -14,9 +14,11 @@
       <!-- <a routerLink="servers">Reload the page </a>
       <a routerLink="./servers">Reload the page </a> -->
       <!-- Non Relative path -->
-      <a routerLink="/servers">Reload the page </a><br>
+      <!--<a routerLink="/servers">Reload the page </a><br> -->
       <!-- or  lik folders -->
       <!-- <a routerLink="../servers">Reload the page </a> -->
+
+      <button class="btn btn-primary" (click)="onReload()">Reload Page</button>
 
       <app-edit-server></app-edit-server>
       <hr>
