--- a/routers/src/app/servers/servers.component.html
+++ b/routers/src/app/servers/servers.component.html
@@ -3,7 +3,7 @@
       <div class="list-group">
         <a
           [routerLink]="['/servers', server.id ]"
-          [queryParams]="{allowEdit:'1'}"
+          [queryParams]="{allowEdit: server.id === 3 ? '1' : '0'}"
           fragment="loading"
           href="#"
           class="list-group-item"
@@ -26,7 +26,7 @@
       <app-edit-server></app-edit-server>
       <hr>
       <app-server></app-server> -->
-      
+
       <!-- using for children routes -->
       <router-outlet></router-outlet>
     </div>
