--- a/new-app/src/app/header/header.component.html
+++ b/new-app/src/app/header/header.component.html
@@ -59,10 +59,12 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link"(click)="onSelect('recipes')">Recipes</a>
+      <!-- <a class="nav-link"(click)="onSelect('recipes')">Recipes</a> -->
+      <a class="nav-link" routerLink="/recipes">Recipes</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link"  (click)="onSelect('shopping-list')">Shopping List</a>
+      <!-- <a class="nav-link"  (click)="onSelect('shopping-list')">Shopping List</a> -->
+      <a class="nav-link" routerLink="/shoppinglist">Shopping List</a>
     </li>
 
     <!-- Dropdown -->
