--- a/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,29 +1,29 @@
-<div class="row">
+<div class="row mx-3">
     <div class="col-xs-12">
         <img src="{{recipeDetails.imagePath}}" alt="" class="img-responsive">
     </div>
 </div>
 
-<div class="row">
+<div class="row mx-3">
     <div class="col-xs-12">
         <h1>{{recipeDetails.name}}</h1>
     </div>
 </div>
 
-<div class="col-xs-12">
-    <h4>Description</h4>
-    <ul class="list-group-item">
+<!-- <div class="col-xs-12"> -->
+    <h4 class="mx-3">Description</h4>
+    <ul class="list-group-item" style=" border: 0px ">
         <li
             class="list-group-item"
             *ngFor="let ingredient of recipeDetails.ingredients"
         >
             {{ ingredient.name}} - {{ ingredient.amount }}
         </li>
-    </ul>
-</div>
+     </ul>
+<!-- </div> -->
 
 
-<div class="row">
+<div class="row mx-3" >
     <div class="col-xs-12">
         <div class="btn-group" appDropdown  #r="appDropdown" >
             <button
