use built-in function that gives us observable ex: interval

--- a/new-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/new-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,7 @@
-<a  class="list-group-item clearfix" (click)="sendRecipeItem()">
+<a  class="list-group-item clearfix rounded my-1" 
+    (click)="sendRecipeItem()" 
+    style="cursor: pointer;"
+    >
     <div class="pull-left" style="display:inline-block">
         <h5 class="list-group-item-heading">{{ recipeItems.name }}</h5>
         <p class="list-group-item-text">{{ recipeItems.description }}</p>
