--- a/new-app/src/app/recipes/recipes.component.html
+++ b/new-app/src/app/recipes/recipes.component.html
@@ -1,4 +1,5 @@
 <div class="row" >
+    
     <div class="col-md-5">
         <!-- using dataBinding and @Input and @Output -->
         <!-- <app-recipe-list (recipeDetail)="showRecipeDetails($event)"></app-recipe-list>  -->
@@ -6,10 +7,7 @@
         <app-recipe-list></app-recipe-list>  
     </div>
     <div class="col-md-7">
-        <app-recipe-detail *ngIf="recipeSelect ==true ;else noRecipeDetails" [recipeDetails]="recipeDetails"  ></app-recipe-detail>
-        <ng-template #noRecipeDetails>
-            <p> Please select recipe </p>
-        </ng-template>
+        <router-outlet></router-outlet>
     </div>
 
 </div>
