--- a/new-app/src/app/header/header.component.html
+++ b/new-app/src/app/header/header.component.html
@@ -1,68 +1,14 @@
-
-<!--nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Recipe Book</a>
-    <div class="">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Recipes<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Shopping List</a>
-        </li> 
-      </ul>
-    </div>
-  </nav>
-<hr>-->
-
-<!-- Second Try of navbar-->
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light mx-auto">
-      <a class="navbar-brand mx-3" href="#">Recipe Book</a>
-      <a class="active mr-10" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item mr-5" href="#">Recipes</a>
-      <a class="nav-item mr-5" href="#">Shopping List</a>
-</nav> -->
-
-<!-- A grey horizontal navbar that becomes vertical on small screens -->
-<!--nav class="navbar navbar-expand-sm bg-light"> -->
-  <!-- Links -->
-  <!-- <ul class="navbar-nav  navbar-expand-lg navbar-light bg-light ">
-    <a class="navbar-brand">Recipe Book</a>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Recipes</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Shopping List</a>
-    </li>
-  </ul> -->
-<!--
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <a class="navbar-brand">Recipe Book</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-    </ul>
-  </div>
-  <br>
-</nav> -->
-
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Recipe Book</a>
+  <a class="navbar-brand">Recipe Book</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
-    <li class="nav-item">
+    <li class="nav-item"routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
       <!-- <a class="nav-link"(click)="onSelect('recipes')">Recipes</a> -->
       <a class="nav-link" routerLink="/recipes">Recipes</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" routerLinkActive="active">
       <!-- <a class="nav-link"  (click)="onSelect('shopping-list')">Shopping List</a> -->
       <a class="nav-link" routerLink="/shoppinglist">Shopping List</a>
     </li>
@@ -73,9 +19,9 @@
        Manage
       </a>
       <div class="dropdown-menu" [ngClass]="{'show':r.isOpen}" >
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
+        <a class="dropdown-item">Link 1</a>
+        <a class="dropdown-item">Link 2</a>
+        <a class="dropdown-item">Link 3</a>
       </div>
     </li>
   </ul>
