--- a/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,4 @@
+
 <div class="row mx-3">
     <div class="col-xs-12">
         <img src="{{recipeDetails.imagePath}}" alt="" class="img-responsive">
@@ -34,11 +35,12 @@
             </button>
             <ul class="dropdown-menu"  [ngClass]="{'show':r.isOpen}">
                 <li><a (click)= "onAddToShoppingList()" style="cursor: pointer;" >To shopping List</a></li>
-                <li><a>Edit Recipe</a></li>
+                <li><a (click)="navigateToEditPage()"> Edit Recipe</a></li>
                 <li><a>Delete Recipe</a></li>
             </ul>
         </div>
     </div>
 </div>
+
 
 
