--- a/new-app/src/app/app.component.html
+++ b/new-app/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header (whatwillBeShowen)="whatWillBeShow($event)"></app-header>
+<!--<app-header (whatwillBeShowen)="whatWillBeShow($event)"></app-header>-->
+<app-header ></app-header>
+
 <br><br>
 <div class="container">
   <div class="row">
