--- a/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<!--
+    <div class="row">
     <div class="col-xs-12  mx-2">
         <form>
             <div class="row">
@@ -23,6 +24,45 @@
                 <div class="row">
                     <div class="col-xs-12  mx-3">
                         <button class="btn btn-success" type="submit" (click)="addNewIngredient()">Add</button>
+                        <button class="btn btn-danger" type="submit">Delete</button>
+                        <button class="btn btn-primary" type="submit">Clear</button>
+                    </div>
+                </div>
+        </form>
+    </div>
+</div>
+-->
+
+<div class="row">
+    <div class="col-xs-12  mx-2">
+        <form (ngSubmit)="onAddItem(f)" #f="ngForm">
+            <div class="row">
+                <div class="col-sm-5 form-group">
+                    <label for="name">Name</label>
+                    <input 
+                        type="text"   
+                        id="name" 
+                        class="form-control"
+                        ngModel
+                        name="name"
+                        required
+                        >
+                </div>
+                <div class="col-sm-3 form-group">
+                    <label for="amount">Amount</label>
+                    <input 
+                        type="number"  
+                        id="amount" 
+                        class="form-control"
+                        ngModel
+                        name="amount"
+                        required
+                        pattern="^[1-9]+[0-9]*$">
+                </div>
+            </div>
+                <div class="row">
+                    <div class="col-xs-12  mx-3">
+                        <button class="btn btn-success" type="submit" [disabled]="!f.valid">Add</button>
                         <button class="btn btn-danger" type="submit">Delete</button>
                         <button class="btn btn-primary" type="submit">Clear</button>
                     </div>
