--- a/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -62,7 +62,7 @@
             </div>
                 <div class="row">
                     <div class="col-xs-12  mx-3">
-                        <button class="btn btn-success" type="submit" [disabled]="!f.valid">Add</button>
+                        <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Updated': 'Add'}}</button>
                         <button class="btn btn-danger" type="submit">Delete</button>
                         <button class="btn btn-primary" type="submit">Clear</button>
                     </div>
