--- a/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -63,8 +63,8 @@
                 <div class="row">
                     <div class="col-xs-12  mx-3">
                         <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Updated': 'Add'}}</button>
-                        <button class="btn btn-danger" type="submit" (click)="resetForm()">Delete</button>
-                        <button class="btn btn-primary" type="submit">Clear</button>
+                        <button class="btn btn-danger" type="button" >Delete</button>
+                        <button class="btn btn-primary"  type="button" (click)="resetForm()">Clear</button>
                     </div>
                 </div>
         </form>
