--- a/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,67 @@
-<p>recipe-edit works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <form>
+            <div class="row ">
+                <div class="col-xs-12">
+                    <button type="sumbit" class="btn btn-success mx-3">Save</button>
+                    <button type="button" class="btn btn-danger">Cancel</button>
+                </div>
+            </div>
+            <div class="row mx-2">
+                <div class="col-xs-12">
+                    <div class="form-group"> 
+                        <label for="name">Name</label>
+                        <input type="text" id="name"
+                        class="form-control">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mx-2">
+                <div class="col-xs-12">
+                    <div class="form-group"> 
+                        <label for="imagePath">URL image</label>
+                        <input type="text" id="name"
+                        class="form-control">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mx-3">
+                <div class="col-xs-12">
+                    <div class="form-group"> 
+                        <img src="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mx-2">
+                <div class="col-xs-12">
+                    <div class="form-group"> 
+                        <label for="description">Description</label>
+                        <textarea type="text" id="name"
+                        class="form-control"
+                        row="6"></textarea>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mx-4">
+                    <div class="row">
+                        <div class="col-xs-8">
+                            <input type="text" 
+                                    class="form-control">
+                        </div>
+                        <div class="col-xs-2">
+                            <input 
+                                type="text"
+                                class="form-control">
+                        </div>
+                        <div class="col-xs-2">
+                            <button class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+            </div>
+        </form>
+    </div>
+</div>
