--- a/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/new-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -62,8 +62,8 @@
             </div>
                 <div class="row">
                     <div class="col-xs-12  mx-3">
-                        <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Updated': 'Add'}}</button>
-                        <button *ngIf="editMode" class="btn btn-danger" type="button" (click)="onDelete()" >Delete</button>
+                        <button class="btn btn-success mx-1" type="submit" [disabled]="!f.valid">{{ editMode ? 'Updated': 'Add'}}</button>
+                        <button *ngIf="editMode" class="btn btn-danger mx-2" type="button" (click)="onDelete()" >Delete</button>
                         <button class="btn btn-primary"  type="button" (click)="resetForm()">Clear</button>
                     </div>
                 </div>
