--- a/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row ">
                 <div class="col-xs-12">
                     <button type="sumbit" class="btn btn-success mx-3">Save</button>
@@ -11,8 +11,10 @@
                 <div class="col-xs-12">
                     <div class="form-group"> 
                         <label for="name">Name</label>
-                        <input type="text" id="name"
-                        class="form-control">
+                        <input type="text"
+                               id="name"
+                               class="form-control"
+                               formControlName="name">
                     </div>
                 </div>
             </div>
@@ -21,8 +23,10 @@
                 <div class="col-xs-12">
                     <div class="form-group"> 
                         <label for="imagePath">URL image</label>
-                        <input type="text" id="name"
-                        class="form-control">
+                        <input type="text" 
+                               id="name"
+                               formControlName="imagePath"
+                               class="form-control">
                     </div>
                 </div>
             </div>
@@ -39,9 +43,12 @@
                 <div class="col-xs-12">
                     <div class="form-group"> 
                         <label for="description">Description</label>
-                        <textarea type="text" id="name"
-                        class="form-control"
-                        row="6"></textarea>
+                        <textarea type="text" 
+                                  id="name"
+                                  class="form-control"
+                                  row="6" 
+                                  formControlName="description"
+                        ></textarea>
                     </div>
                 </div>
             </div>
