--- a/new-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/new-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -17,6 +17,7 @@
  -->
 
 <!-- using cross component -->
+
 <div class="row">
     <div class="col-xs-12 ">
         <app-recipe-item
@@ -29,6 +30,20 @@
         </app-recipe-item>
     </div>
 </div>
+
+<!--
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <app-recipe-item
+        *ngFor="let recipeEl of recipes; let i = index"
+        [recipeItems]="recipeEl"
+        [index]="i"></app-recipe-item>
+    </div>
+  </div>
+-->
+  
+  
 
 
 
