--- a/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,7 @@
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row ">
                 <div class="col-xs-12">
-                    <button type="sumbit" class="btn btn-success mx-3">Save</button>
+                    <button type="sumbit" class="btn btn-success mx-3" [disabled]="!recipeForm.valid">Save</button>
                     <button type="button" class="btn btn-danger">Cancel</button>
                 </div>
             </div>
@@ -74,7 +74,8 @@
                     <div class="col-xs-2">
                         <button
                           type="button"
-                          class="btn btn-danger">X</button>
+                          class="btn btn-danger"
+                          >X</button>
                       </div>
                   </div>
                   <hr>
