--- a/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -26,7 +26,8 @@
                         <input type="text" 
                                id="name"
                                formControlName="imagePath"
-                               class="form-control">
+                               class="form-control"
+                               #imagePath>
                     </div>
                 </div>
             </div>
@@ -34,7 +35,7 @@
             <div class="row mx-3">
                 <div class="col-xs-12">
                     <div class="form-group"> 
-                        <img src="" class="img-responsive">
+                        <img [src]="imagePath.value" class="img-responsive">
                     </div>
                 </div>
             </div>
