deleting igre=dients and some finisging touches

--- a/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/new-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -76,7 +76,7 @@
                         <button
                           type="button"
                           class="btn btn-danger"
-                          >X</button>
+                          (click)="onDeleteIngredient(i)">X</button>
                       </div>
                   </div>
                   <hr>
