--- a/http-request/src/app/app.component.html
+++ b/http-request/src/app/app.component.html
@@ -58,7 +58,12 @@
             <p> {{ post.content}}</p>
         </li>
       </ul>
-      <p *ngIf="isFetching">Loading...</p>
+      <p *ngIf="isFetching && !error">Loading...</p>
+      <div class="alert alert-danger" *ngIf="error">
+        <h1>An error occured!! </h1>
+        <p>  {{error}}      </p>
+        <div class="btn btn-danger" (click)="onHandleError()"> Clear me</div>
+      </div>
     </div>
   </div>
 </div>
