--- a/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/new-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <!-- <div class="col-xs-12"> -->
-    <h4 class="mx-3">Description</h4>
+    <h4 class="mx-3">{{recipeDetails.description}}</h4>
     <ul class="list-group-item" style=" border: 0px ">
         <li
             class="list-group-item"
