--- a/new-app/src/app/header/header.component.html
+++ b/new-app/src/app/header/header.component.html
@@ -4,18 +4,27 @@
 
   <!-- Links -->
   <ul class="navbar-nav">
-    <li class="nav-item"routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+    <li class="nav-item"routerLinkActive="active" *ngIf="isAuthenticated" [routerLinkActiveOptions]="{exact: true}">
       <!-- <a class="nav-link"(click)="onSelect('recipes')">Recipes</a> -->
       <a class="nav-link" routerLink="/recipes">Recipes</a>
     </li>
+    <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
+      <a class="nav-link" routerLink="/auth">Authentication</a>
+    </li>
+    
+
     <li class="nav-item" routerLinkActive="active">
       <!-- <a class="nav-link"  (click)="onSelect('shopping-list')">Shopping List</a> -->
       <a class="nav-link" routerLink="/shoppinglist">Shopping List</a>
     </li>
 
+    <li class="nav-item" routerLinkActive="active"v *ngIf="isAuthenticated">
+      <a class="nav-link" style="cursor: pointer;" (click)="onLogout()">Logout</a>
+    </li>
+
     <!-- Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle navbar-right"  id="navbardrop" data-toggle="dropdown" appDropdown  #r="appDropdown">
+    <li class="nav-item dropdown" *ngIf="isAuthenticated">
+      <a class="nav-link dropdown-toggle navbar-right"  id="navbardrop" data-toggle="dropdown" appDropdown  #r="appDropdown" >
        Manage
       </a>
       <div class="dropdown-menu" [ngClass]="{'show':r.isOpen}" >
